<?xml version="1.0"?>
<package format="2">
  <name>arm_description</name>
  <version>0.0.0</version>
  <description>Very first</description>

  <maintainer email="doorebong@gmail.com">bongsub song</maintainer>

  <license>NA</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/arm_description</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!--   <doc_depend>doxygen</doc_depend> -->

  <export>
  </export>
</package>
